--- a/imagey-web/package.json
+++ b/imagey-web/package.json
@@ -13,6 +13,13 @@
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
+    "@mui/material": "^6.1.2",
+    "@pact-foundation/pact": "^13.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
