--- a/imagey-server/pom.xml
+++ b/imagey-server/pom.xml
@@ -144,6 +144,9 @@
         <version>3.3.0</version>
         <configuration>
           <argLine>@{argLine}</argLine>
+          <systemPropertyVariables>
+            <org.apache.geronimo.config.configsource.SystemPropertyConfigSource.copy>false</org.apache.geronimo.config.configsource.SystemPropertyConfigSource.copy>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
       <plugin>
@@ -187,12 +190,12 @@
                     <limit>
                       <counter>INSTRUCTION</counter>
                       <value>COVEREDRATIO</value>
-                      <minimum>0.91</minimum>
+                      <minimum>0.92</minimum>
                     </limit>
                     <limit>
                       <counter>LINE</counter>
                       <value>COVEREDRATIO</value>
-                      <minimum>0.85</minimum>
+                      <minimum>0.86</minimum>
                     </limit>
                     <limit>
                       <counter>BRANCH</counter>
@@ -202,12 +205,12 @@
                     <limit>
                       <counter>COMPLEXITY</counter>
                       <value>COVEREDRATIO</value>
-                      <minimum>0.76</minimum>
+                      <minimum>0.77</minimum>
                     </limit>
                     <limit>
                       <counter>METHOD</counter>
                       <value>COVEREDRATIO</value>
-                      <minimum>0.96</minimum>
+                      <minimum>0.98</minimum>
                     </limit>
                     <limit>
                       <counter>CLASS</counter>
