--- a/imagey-web/package.json
+++ b/imagey-web/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "prettier . --check && eslint src && eslint tests",
+    "prettier": "prettier . -w",
     "preview": "vite preview",
     "test": "playwright test",
     "test:coverage": "nyc --reporter=lcov playwright test",
+    "test:coverage:report": "nyc --reporter=html report",
+    "test:coverage:ui": "open coverage/index.html",
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
@@ -21,7 +24,8 @@
     "@mui/material": "^6.1.2",
     "@pact-foundation/pact": "^13.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
