--- a/imagey-web/public/manifest.json
+++ b/imagey-web/public/manifest.json
@@ -7,7 +7,7 @@
   "display": "fullscreen",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "imagey192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
@@ -15,6 +15,11 @@
       "src": "imagey512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "imagey.svg",
+      "type": "image/svg+xml",
+      "sizes": "any"
     }
   ],
   "shortcuts": [
@@ -23,14 +28,19 @@
       "url": "/images",
       "icons": [
         {
-          "src": "icon-192.png",
+          "src": "imagey192.png",
           "type": "image/png",
           "sizes": "192x192"
         },
         {
-          "src": "icon-512.png",
+          "src": "imagey512.png",
           "type": "image/png",
           "sizes": "512x512"
+        },
+        {
+          "src": "imagey.svg",
+          "type": "image/svg+xml",
+          "sizes": "any"
         }
       ]
     },
