--- a/imagey-server/pom.xml
+++ b/imagey-server/pom.xml
@@ -153,6 +153,12 @@
         <groupId>org.apache.meecrowave</groupId>
         <artifactId>meecrowave-maven-plugin</artifactId>
         <version>1.2.15</version>
+        <configuration>
+          <watcherBouncing>1</watcherBouncing>
+          <properties>
+            <root.path>src/main/resources/data</root.path>
+          </properties>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
