--- a/imagey-web/.nycrc.json
+++ b/imagey-web/.nycrc.json
@@ -1,8 +1,8 @@
 {
-  "extends": "@istanbuljs/nyc-config-typescript",
+  "extends": "nyc-config-tsx",
   "check-coverage": true,
-  "branches": 94,
+  "branches": 95,
   "lines": 95,
   "statements": 95,
-  "functions": 96
+  "functions": 100
 }
