feat: Store document

--- a/imagey-server/src/test/resources/data/.gitignore
+++ b/imagey-server/src/test/resources/data/.gitignore
@@ -1,2 +1,5 @@
 /*/
 !mary\@imagey.cloud/
+/mary\@imagey.cloud/documents/
+!/mary\@imagey.cloud/documents/bb66aba3-8338-4ef4-a6f8-43ed0b39ecd3
+!/mary\@imagey.cloud/documents/f9910aa7-4db6-4b02-b596-c3ccf872ae98
