--- a/imagey-web/package.json
+++ b/imagey-web/package.json
@@ -14,7 +14,8 @@
     "test:coverage:report": "nyc --reporter=html report",
     "test:coverage:ui": "open coverage/index.html",
     "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug"
+    "test:debug": "playwright test --debug",
+    "i18n:check": "i18next 'src/**/*.ts*' -o 'src/translation/locales/$LOCALE/$NAMESPACE.json'"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -24,8 +25,13 @@
     "@mdi/react": "^1.6.1",
     "@mui/material": "^6.1.2",
     "@pact-foundation/pact": "^13.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.6.1",
     "react-router": "^7.1.5"
   },
   "devDependencies": {
@@ -35,10 +41,11 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.9.0",
+    "i18next-parser": "^9.3.0",
     "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
