--- a/imagey-web/package.json
+++ b/imagey-web/package.json
@@ -10,7 +10,7 @@
     "prettier": "prettier . -w",
     "preview": "vite preview",
     "test": "playwright test",
-    "test:coverage": "nyc --reporter=lcov playwright test",
+    "test:coverage": "nyc --reporter=lcov --reporter=text-summary playwright test",
     "test:coverage:report": "nyc --reporter=html report",
     "test:coverage:ui": "open coverage/index.html",
     "test:ui": "playwright test --ui",
@@ -21,14 +21,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
-    "@mdi/js": "^7.4.47",
-    "@mdi/react": "^1.6.1",
-    "@mui/material": "^6.1.2",
-    "@pact-foundation/pact": "^13.1.4",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "beercss": "^3.11.33",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "material-dynamic-colors": "^1.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.1",
@@ -37,6 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@pact-foundation/pact": "^15.0.1",
     "@playwright/test": "^1.47.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
@@ -46,6 +45,9 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.9.0",
     "i18next-parser": "^9.3.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-reports": "^3.2.0",
     "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
